--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
----
 site_name: BTU GIS
+
 theme:
   name: material
   palette:
@@ -21,26 +21,23 @@ theme:
   font:
     text: Merriweather Sans
     code: Red Hat Mono
-
-    logo: ./assets/images/logo.png
-    favicon: assets/favicon.ico
-
-    palette:
-      # Dark Mode
-      - scheme: slate
-        toggle:
-          icon: material/weather-sunny
-          name: Light mode
-        primary: green
-        accent: orange
-  
-      # Light Mode
-      - scheme: default
-        toggle:
-          icon: material/weather-night
-          name: Dark mode
-        primary: green
-        accent: deep orange
+  logo: assets/images/logo.png
+  favicon: assets/favicon.ico
+  palette:
+    # Dark Mode
+    - scheme: slate
+      toggle:
+        icon: material/weather-sunny
+        name: Light mode
+      primary: green
+      accent: orange
+    # Light Mode
+    - scheme: default
+      toggle:
+        icon: material/weather-night
+        name: Dark mode
+      primary: green
+      accent: deep orange
 
   icon:
     admonition:
@@ -57,7 +54,6 @@ theme:
       example: octicons/beaker-16
       quote: octicons/quote-16
 
-
 # Repository
 repo_name: BTU GIS
 repo_url: https://github.com/ezdanapak/BTU-GIS
@@ -65,8 +61,6 @@ repo_url: https://github.com/ezdanapak/BTU-GIS
 copyright: Copyright &copy; 2025 Giorgi Kapanadze
 
 markdown_extensions:
-  
-  
   - attr_list
   - md_in_html
   - pymdownx.blocks.caption
@@ -79,80 +73,72 @@ markdown_extensions:
       pygments_lang_class: true
   - pymdownx.inlinehilite
   - pymdownx.snippets
-  - pymdownx.superfences
-  - pymdownx.highlight
-  - pymdownx.tabbed:
-      alternate_style: true 
-  - admonition
-  - pymdownx.details
-
   - pymdownx.superfences:
       custom_fences:
         - name: mermaid
           class: mermaid
           format: !!python/name:pymdownx.superfences.fence_code_format
+  - pymdownx.tabbed:
+      alternate_style: true
+  - admonition
+  - pymdownx.details
 
 nav:
   - მთავარი: index.md
-  - 'ICS - GIS':
-    - 'About':
-      - Instructor: './ICS_GIS/Instructor.md'
-      - Syllabus: './ICS_GIS/Syllabus.md'
-      - Schedule: './ICS_GIS/Schedule.md'
-      - Textbooks: './ICS_GIS/Textbooks.md'
-      - Videos: './ICS_GIS/Videos.md'
-      - Acknowledgments: './ICS_GIS/Acknowledgments.md'
-      - Info: './ICS_GIS/Info.md'
-      - Another staff: './ICS_GIS/Another_staff.md'
-      - Presentations: './ICS_GIS/Presentations.md'
-      - Copyright: './ICS_GIS/Copyright_Disclaimer.md'
-      - Exam: './ICS_GIS/Exam.md'
-      
-
-    - Software Tools:
-      - ArcGIS: './ICS_GIS/Software/ArcGIS.md'
-      - Google Earth: './ICS_GIS/Software/GoogleEarth.md'
-    - Theory:
-      - Topic 1: './ICS_GIS/Theory/Topic_1.md'
-      - Topic 2: './ICS_GIS/Theory/Topic_2.md'
-      - Map composition: './ICS_GIS/Theory/Map_composition.md'
-      - Geodatabase: './ICS_GIS/Theory/Geodatabase.md'
-
-      - Georeferencing: './ICS_GIS/Theory/Georeferencing.md'
-    - Labs:
-      - Digitization: './ICS_GIS/Lab/Digitization.md'
-      - GPS: './ICS_GIS/Lab/GPS.md'
-      - Topology: './ICS_GIS/Lab/Topology.md'
-      - DEM & TIN: './ICS_GIS/Lab/DEM_TIN.md'
-      - Geodatabase: './ICS_GIS/Lab/Geodatabase.md'
-      - Lab 6: './ICS_GIS/Lab/Lab_6.md'
-      - Terrain analysis: './ICS_GIS/Lab/Terrain_analysis.md'
-      - Georeference : './ICS_GIS/Lab/Georeference.md'
-      - Lab 9: './ICS_GIS/Lab/Lab_9.md'
-      - Hydrological analysis: './ICS_GIS/Lab/Hydrological_analysis.md'
-      - Lab 11: './ICS_GIS/Lab/Lab_11.md'
-      - Lab 12: './ICS_GIS/Lab/Lab_12.md'
-      - Lab 13: './ICS_GIS/Lab/Lab_13.md'
-      - Lab 14: './ICS_GIS/Lab/Lab_14.md'
-      - Lab 15: './ICS_GIS/Lab/Lab_15.md'
-  - 'ASBE - GIS': 
-    - Info: './ASBE_GIS/Info.md'
-  - 'SMD - GIS': 
-    - Info: './SMD_GIS/Info.md'
-
-
-
-  
-
-
-
-
-
-
-
-
-
+  - საინფორმაციო ტექნოლოგიები (IT):
+    - გეოინფორმაციული სისტემები (GIS):
+      - About: null  # დაამატე საჭირო ფაილი ან ამოიღე
+      - Instructor: ICS_GIS/Instructor.md
+      - Syllabus: ICS_GIS/Syllabus.md
+      - Schedule: ICS_GIS/Schedule.md
+      - Textbooks: ICS_GIS/Textbooks.md
+      - Videos: ICS_GIS/Videos.md
+      - Acknowledgments: ICS_GIS/Acknowledgments.md
+      - Info: ICS_GIS/Info.md
+      - Another staff: ICS_GIS/Another_staff.md
+      - Presentations: ICS_GIS/Presentations.md
+      - Copyright: ICS_GIS/Copyright_Disclaimer.md
+      - Exam: ICS_GIS/Exam.md
+      - Software Tools:
+        - ArcGIS: ICS_GIS/Software/ArcGIS.md
+        - Google Earth: ICS_GIS/Software/GoogleEarth.md
+      - Theory:
+        - Topic 1: ICS_GIS/Theory/Topic_1.md
+        - Topic 2: ICS_GIS/Theory/Topic_2.md
+        - Map composition: ICS_GIS/Theory/Map_composition.md
+        - Geodatabase: ICS_GIS/Theory/Geodatabase.md
+        - Georeferencing: ICS_GIS/Theory/Georeferencing.md
+      - Labs:
+        - Digitization: ICS_GIS/Lab/Digitization.md
+        - GPS: ICS_GIS/Lab/GPS.md
+        - Topology: ICS_GIS/Lab/Topology.md
+        - DEM & TIN: ICS_GIS/Lab/DEM_TIN.md
+        - Geodatabase: ICS_GIS/Lab/Geodatabase.md
+        - Lab 6: ICS_GIS/Lab/Lab_6.md
+        - Terrain analysis: ICS_GIS/Lab/Terrain_analysis.md
+        - Georeference: ICS_GIS/Lab/Georeference.md
+        - Lab 9: ICS_GIS/Lab/Lab_9.md
+        - Hydrological analysis: ICS_GIS/Lab/Hydrological_analysis.md
+        - Lab 11: ICS_GIS/Lab/Lab_11.md
+        - Lab 12: ICS_GIS/Lab/Lab_12.md
+        - Lab 13: ICS_GIS/Lab/Lab_13.md
+        - Lab 14: ICS_GIS/Lab/Lab_14.md
+        - Lab 15: ICS_GIS/Lab/Lab_15.md
+      - გეოინფორმაციული სისტემების პროგრამირება:
+        - Instructor: ICS_GIS/Instructor.md
+        - Syllabus: ICS_GIS/Syllabus.md
+        - Schedule: ICS_GIS/Schedule.md
+        - Textbooks: ICS_GIS/Textbooks.md
+        - Videos: ICS_GIS/Videos.md
+        - Acknowledgments: ICS_GIS/Acknowledgments.md
+        - Info: ICS_GIS/Info.md
+        - Another staff: ICS_GIS/Another_staff.md
+        - Presentations: ICS_GIS/Presentations.md
+        - Copyright: ICS_GIS/Copyright_Disclaimer.md
+        - Exam: ICS_GIS/Exam.md
+  - GIS:
+    - Info: Info.md
 
 plugins:
   - search
- # - glightbox
+  # - glightbox
